# foodness_backend

./: README.md  pyproject.toml
foodness_backend/: urls.py  wsgi.py
foodness_backend/settings/: base.py  dev.py
foodness_backend/templates/: base.html
foodness_recipes/: __init__.py  apps.py
foodness_users/: __init__.py  admin.py  apps.py  models.py  settings.py  signals.py  wagtail_hooks.py
foodness_users/migrations/: 0001_initial.py
foodness_utils/: mixins.py
locale/hr/LC_MESSAGES/: django.po
