[tool.poetry]
name = "foodness_backend"
version = "0.1.0"
description = "Backend service for the Foodness project, including the admin interface and the API."
authors = ["Davor Škalec <davor.skalec@styria.dev>"]
license = "Davor Škalec <davor.skalec@gmail.com>"

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.5"
djangorestframework = "^3.12.2"
psycopg2 = "^2.8.6"
django-filter = "^2.4.0"
wagtail = "^2.11.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
